<resources>
    <string name="app_name">proyecto 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenidos">¡Bienvenidos a nuestro Programa!</string>
    <string name="nombre">Ingrese el Nombre</string>
    <string name="apellido">Ingrese el Apellido</string>
    <string name="limpiar">Limpiar</string>
    <string name="enviar">Enviar</string>
    <string name="nombreIngresado">Nombre ingresado</string>
    <string name="apellidoIngresado">Apellido ingresado</string>
</resources>